# ComphotoFall2011_project1

./: CMakeLists.txt  README.md  demo.cpp  main.cpp
include/filter/: boxfilter.h  filter.h  guidedfilter.h
include/ui/: processedimage.h  project1.h
src/: boxfilter.cpp  guidedfilter.cpp  processedimage.cpp  project1.cpp
static/: project1.css  project1.xml
test/: test_boxfilter.cpp  test_guidedfilter.cpp
